// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo-key"
                    id="TextFieldLabel15"
                  >
                    foo Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel15"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo-key"
                      name="root_foo-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo"
                    id="TextFieldLabel20"
                  >
                    foo
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel20"
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
              
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__26"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__29"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_a"
                id="TextFieldLabel2"
              >
                A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel2"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_b"
                id="TextFieldLabel7"
              >
                B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel7"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__10"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_additionalProperty-key"
                    id="TextFieldLabel34"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel34"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty-key"
                      name="root_additionalProperty-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="additionalProperty"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_additionalProperty"
                    id="TextFieldLabel39"
                  >
                    additionalProperty
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel39"
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
              </div>
              
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__45"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__48"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo-key"
                    id="TextFieldLabel66"
                  >
                    foo Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel66"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo-key"
                      name="root_foo-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo"
                    id="TextFieldLabel71"
                  >
                    foo
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel71"
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
              
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__77"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__80"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo-key"
                    id="TextFieldLabel168"
                  >
                    foo Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel168"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo-key"
                      name="root_foo-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo"
                    id="TextFieldLabel173"
                  >
                    foo
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel173"
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
              
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__179"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__182"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from both object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_a"
                id="TextFieldLabel155"
              >
                My Item A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel155"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-140"
          >
            <span
              className="css-140"
              id="root_a__description"
            >
              a fancier item A description
            </span>
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_b"
                id="TextFieldLabel160"
              >
                My Item B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel160"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-140"
          >
            <span
              className="css-140"
              id="root_b__description"
            >
              a fancier item B description
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__163"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo-key"
                    id="TextFieldLabel117"
                  >
                    foo Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel117"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo-key"
                      name="root_foo-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo"
                    id="TextFieldLabel122"
                  >
                    foo
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel122"
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
              
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__128"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__131"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_a"
                id="TextFieldLabel104"
              >
                My Item A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel104"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-140"
          >
            <span
              className="css-140"
              id="root_a__description"
            >
              a fancier item A description
            </span>
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_b"
                id="TextFieldLabel109"
              >
                My Item B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel109"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-140"
          >
            <span
              className="css-140"
              id="root_b__description"
            >
              a fancier item B description
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__112"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_additionalProperty-key"
                    id="TextFieldLabel136"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel136"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty-key"
                      name="root_additionalProperty-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="additionalProperty"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_additionalProperty"
                    id="TextFieldLabel141"
                  >
                    additionalProperty
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel141"
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
              </div>
              
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__147"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__150"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_a"
                id="TextFieldLabel53"
              >
                A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel53"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-140"
          >
            <span
              className="css-140"
              id="root_a__description"
            >
              A description
            </span>
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-122"
                htmlFor="root_b"
                id="TextFieldLabel58"
              >
                B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel58"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-140"
          >
            <span
              className="css-140"
              id="root_b__description"
            >
              B description
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__61"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-139"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-140"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_additionalProperty-key"
                    id="TextFieldLabel85"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel85"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty-key"
                      name="root_additionalProperty-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="additionalProperty"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_additionalProperty"
                    id="TextFieldLabel90"
                  >
                    additionalProperty
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel90"
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
              </div>
              
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__96"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__99"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_foo-key"
                    id="TextFieldLabel200"
                  >
                    foo Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel200"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo-key"
                      name="root_foo-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      aria-invalid={false}
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__211"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__214"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__195"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          dir="ltr"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-122"
                    htmlFor="root_additionalProperty-key"
                    id="TextFieldLabel219"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel219"
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty-key"
                      name="root_additionalProperty-key"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      required={false}
                      type="text"
                      value="additionalProperty"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg5"
            >
              <div
                className="ms-TextField root-111"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-112"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      aria-invalid={false}
                      autoFocus={false}
                      className="ms-TextField-field field-113"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Grid-col ms-sm4 ms-md4 ms-lg2"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <button
                className="ms-Button ms-Button--icon root-131"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-124"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 css-134 ms-Button-icon icon-126"
                    data-icon-name="Delete"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span
        style={
          Object {
            "float": "right",
          }
        }
      >
        <button
          className="ms-Button ms-Button--commandBar object-property-expand root-135"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "32px",
            }
          }
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-124"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-134 ms-Button-icon icon-136"
              data-icon-name="Add"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-125"
            >
              <span
                className="ms-Button-label label-137"
                id="id__230"
              >
                Add Item
              </span>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-123"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-124"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-125"
          >
            <span
              className="ms-Button-label label-127"
              id="id__233"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
